fixed header menu button alignment

--- a/projects/wolf-app/src/app/app.component.scss
+++ b/projects/wolf-app/src/app/app.component.scss
@@ -17,6 +17,7 @@
 		width					: 100vw;
 		background-color		: var(--background-header);
 		transition				: $bg-transition;
+		padding-left			: 0;
 
 	}
 
